FIX: Removed margin on <p> comoponent on footer to prevent white space

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,8 @@ footer a:hover {
 }
 
 footer p {
+  padding-bottom: 16px;
+  margin-bottom: 0;
   color: aliceblue;
   text-align: center;
 }
